--- a/Texto.html
+++ b/Texto.html
@@ -9,7 +9,7 @@
 <body>
  <h1> Loja de sapatos</h1>  
  <h3> Venda de Artigos esportivos diversos     </h3>
- <p>O intuito da loja e venda de calçados com rapidez e compromisso com o usuario</p>
+ <p>O intuito da loja é venda de calçados com rapidez e compromisso com o usuario</p>
  <img src="./Imagem/" alt="">
  <a href="loja sapato">https://www.centauro.com.br/?gclid=CjwKCAjw1YCkBhAOEiwA5aN4AS2gnVoXxAHdp62yJZIDBimLZ52T6ql3RpyuFKK8gU6EpFhBwQU4BRoCHt4QAvD_BwE&utm_referrer=https://www.google.com/</a>
 </body>
